--- a/app/src/main/res/layout/activity_detail_voisin.xml
+++ b/app/src/main/res/layout/activity_detail_voisin.xml
@@ -60,12 +60,12 @@
             android:layout_marginTop="5dp"/>
 
         <ImageView
-            android:id="@+id/activity_localisation_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/imageView2"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:layout_marginTop="36dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="30dp"
-            tools:srcCompat="@android:drawable/ic_menu_mylocation" />
+            app:srcCompat="@drawable/ic_location_on_black_24dp" />
 
         <TextView
             android:id="@+id/activity_adresse_text"
@@ -76,12 +76,13 @@
             android:layout_marginEnd="8dp" />
 
         <ImageView
-            android:id="@+id/activity_phone_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="65dp"
+            android:id="@+id/imageView3"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:layout_marginTop="74dp"
             android:layout_marginStart="8dp"
-            app:srcCompat="@android:drawable/ic_menu_call" />
+            app:srcCompat="@drawable/ic_phone_black_24dp" />
+
         <TextView
             android:id="@+id/activity_phone_text"
             android:layout_width="match_parent"
@@ -91,12 +92,13 @@
             android:layout_marginEnd="8dp"/>
 
         <ImageView
-            android:id="@+id/activity_internet_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/imageView4"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:layout_marginTop="110dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="102dp"
-            app:srcCompat="@android:drawable/ic_menu_help" />
+            app:srcCompat="@drawable/ic_blur_circular_black_24dp" />
+
         <TextView
             android:id="@+id/activity_mail_text"
             android:layout_width="match_parent"
