--- a/app/src/main/res/layout/activity_detail_voisin.xml
+++ b/app/src/main/res/layout/activity_detail_voisin.xml
@@ -14,7 +14,7 @@
         tools:ignore="MissingConstraints" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/image_avatar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
