--- a/app/src/main/res/layout/activity_detail_voisin.xml
+++ b/app/src/main/res/layout/activity_detail_voisin.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/acttivity_detail"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:layout_gravity="center"
     tools:context=".ui.neighbour_list.DetailVoisinActivity">
 
-    <ImageButton
-        android:id="@+id/imageButtonBack"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="?attr/actionModeCloseDrawable"
-        tools:ignore="MissingConstraints" />
 
     <ImageView
         android:id="@+id/image_avatar"
@@ -19,10 +17,16 @@
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
         android:layout_marginBottom="350dp"
-        app:srcCompat="@drawable/ic_launcher_background"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="-159dp"
-        tools:ignore="MissingConstraints" />
+        app:srcCompat="@drawable/ic_launcher_background"/>
+
+
+    <ImageButton
+        android:id="@+id/imageButtonBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="?attr/actionModeCloseDrawable"
+        tools:ignore="MissingConstraints"
+        />
 
     <TextView
         android:id="@+id/nameProfil"
@@ -32,22 +36,13 @@
         tools:layout_editor_absoluteY="227dp"
         tools:ignore="MissingConstraints" />
 
-    <ImageButton
-        android:id="@+id/imageButtonFav"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@android:drawable/btn_star_big_on"
-        tools:layout_editor_absoluteX="355dp"
-        tools:layout_editor_absoluteY="226dp"
-        tools:ignore="MissingConstraints" />
 
     <android.support.v7.widget.CardView
         android:id="@+id/activity_profil_details"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="150dp"
-        tools:layout_editor_absoluteX="-40dp"
-        tools:layout_editor_absoluteY="270dp"
+        android:layout_marginTop="255dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         tools:ignore="MissingConstraints">
@@ -115,6 +110,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="150dp"
+        android:layout_marginTop="440dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         tools:ignore="DuplicateIds,MissingConstraints"
@@ -144,9 +140,17 @@
 
     </android.support.v7.widget.CardView>
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/imageButtonFav"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="180dp"
+        android:layout_marginStart="350dp"
+        app:srcCompat="@android:drawable/btn_star_big_on"
+        app:backgroundTint="@color/cardview_light_background"/>
 
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
 
 
 
