--- a/app/src/main/res/layout/activity_detail_voisin.xml
+++ b/app/src/main/res/layout/activity_detail_voisin.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/acttivity_detail"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/acttivity_detail"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:layout_gravity="center"
+    android:background="@color/colorPrimaryDark"
+    android:backgroundTint="@color/colorPrimary"
+    android:orientation="vertical"
     tools:context=".ui.neighbour_list.DetailVoisinActivity">
 
 
@@ -15,41 +16,37 @@
         android:id="@+id/image_avatar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop"
         android:layout_marginBottom="350dp"
-        app:srcCompat="@drawable/ic_launcher_background"/>
-
+        android:scaleType="centerCrop"
+        app:srcCompat="@drawable/ic_launcher_background" />
 
     <ImageButton
         android:id="@+id/imageButtonBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="?attr/actionModeCloseDrawable"
-        tools:ignore="MissingConstraints"
-        android:tint="@color/cardview_dark_background"
-        app:backgroundTint="@color/cardview_light_background"
-        />
+        android:background="@null"
+        app:srcCompat="@drawable/ic_arrow_back_black_24dp" />
 
     <TextView
         android:id="@+id/nameProfil"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="180dp"
-        tools:layout_editor_absoluteX="-14dp"
-        tools:layout_editor_absoluteY="227dp"
-        android:textSize="40dp"
         android:textColor="@color/cardview_light_background"
-        tools:ignore="MissingConstraints" />
+        android:textSize="40dp"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="-14dp"
+        tools:layout_editor_absoluteY="227dp" />
 
 
     <android.support.v7.widget.CardView
         android:id="@+id/activity_profil_details"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="150dp"
-        android:layout_marginTop="255dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="265dp"
         android:layout_marginEnd="8dp"
+        android:minHeight="150dp"
         tools:ignore="MissingConstraints">
 
         <TextView
@@ -57,14 +54,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="5dp"/>
+            android:layout_marginTop="5dp" />
 
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="16dp"
             android:layout_height="16dp"
-            android:layout_marginTop="36dp"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="36dp"
             app:srcCompat="@drawable/ic_location_on_black_24dp" />
 
         <TextView
@@ -73,39 +70,41 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
             android:layout_marginTop="34dp"
-            android:layout_marginEnd="8dp" />
+            android:layout_marginEnd="8dp"
+            android:text="Saint pierre du mont à 5km" />
 
         <ImageView
             android:id="@+id/imageView3"
             android:layout_width="16dp"
             android:layout_height="16dp"
-            android:layout_marginTop="74dp"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="74dp"
             app:srcCompat="@drawable/ic_phone_black_24dp" />
 
         <TextView
             android:id="@+id/activity_phone_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="70dp"
             android:layout_marginStart="50dp"
-            android:layout_marginEnd="8dp"/>
+            android:layout_marginTop="70dp"
+            android:layout_marginEnd="8dp"
+            android:text="+33 6 86 57 90 14" />
 
         <ImageView
             android:id="@+id/imageView4"
             android:layout_width="16dp"
             android:layout_height="16dp"
-            android:layout_marginTop="110dp"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="110dp"
             app:srcCompat="@drawable/ic_blur_circular_black_24dp" />
 
         <TextView
             android:id="@+id/activity_mail_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="108dp"
             android:layout_marginStart="50dp"
-            android:layout_marginEnd="8dp"/>
+            android:layout_marginTop="108dp"
+            android:layout_marginEnd="8dp" />
 
 
     </android.support.v7.widget.CardView>
@@ -114,10 +113,10 @@
         android:id="@+id/activity_profil_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="150dp"
-        android:layout_marginTop="440dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="440dp"
         android:layout_marginEnd="8dp"
+        android:minHeight="150dp"
         tools:ignore="DuplicateIds,MissingConstraints"
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="437dp">
@@ -126,33 +125,35 @@
             android:id="@+id/activity_desc_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:textSize="20sp"
-            android:text="A propos de moi"
-            android:textStyle="bold"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="18dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"/>
+            android:text="    A propos de moi"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/activity_descri_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="58dp"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="58dp"
             android:layout_marginEnd="8dp"
-            android:padding="35dp"/>
+            android:padding="17dp"
+            android:text="Bonjour !Je souhaiterais faire de la marche nordique. pas initiée,je recherche une ou plusieurs personnes susceptibles de m accompagner !J'aime les jeux de cartes tels la belote et le tarot..."
+            android:textSize="12dp" />
 
 
     </android.support.v7.widget.CardView>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/imageButtonFav"
+        android:id="@+id/floating_ButtonFav"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="180dp"
         android:layout_marginStart="350dp"
-        app:srcCompat="@android:drawable/btn_star_big_on"
-        app:backgroundTint="@color/cardview_light_background"/>
+        android:layout_marginTop="230dp"
+        app:backgroundTint="@color/cardview_light_background"
+        app:srcCompat="@android:drawable/btn_star_big_on" />
 
 
 </RelativeLayout>
