--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#03A9F4</color>
-    <color name="colorPrimaryDark">#0287c3</color>
-    <color name="colorAccent">#FF80AB</color>
+    <color name="colorPrimary">#F7F9FA</color>
+    <color name="colorPrimaryDark">#0287C3</color>
+    <color name="colorAccent">#F57FEB</color>
 </resources>
