--- a/app/src/main/res/layout/activity_detail_voisin.xml
+++ b/app/src/main/res/layout/activity_detail_voisin.xml
@@ -31,7 +31,7 @@
         android:id="@+id/nameProfil"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="180dp"
+        android:layout_marginTop="230dp"
         android:textColor="@color/cardview_light_background"
         android:textSize="40dp"
         tools:ignore="MissingConstraints"
@@ -44,7 +44,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="265dp"
+        android:layout_marginTop="320dp"
         android:layout_marginEnd="8dp"
         android:minHeight="150dp"
         tools:ignore="MissingConstraints">
@@ -114,7 +114,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="440dp"
+        android:layout_marginTop="490dp"
         android:layout_marginEnd="8dp"
         android:minHeight="150dp"
         tools:ignore="DuplicateIds,MissingConstraints"
@@ -147,13 +147,14 @@
     </android.support.v7.widget.CardView>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/floating_ButtonFav"
+        android:id="@+id/floatingActionButtonFav"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="350dp"
-        android:layout_marginTop="230dp"
-        app:backgroundTint="@color/cardview_light_background"
-        app:srcCompat="@android:drawable/btn_star_big_on" />
+        android:clickable="true"
+        android:layout_marginTop="280dp"
+        android:layout_marginStart="340dp"
+        app:srcCompat="@drawable/ic_star_border_white_24dp"
+        />
 
 
 </RelativeLayout>
