--- a/app/src/main/res/layout/activity_detail_voisin.xml
+++ b/app/src/main/res/layout/activity_detail_voisin.xml
@@ -92,12 +92,12 @@
             android:text="+33 6 86 57 90 14" />
 
         <ImageView
-            android:id="@+id/imageView4"
+            android:id="@+id/imageView"
             android:layout_width="16dp"
             android:layout_height="16dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="120dp"
-            app:srcCompat="@drawable/ic_blur_circular_black_24dp" />
+            app:srcCompat="@drawable/ic_language_black_24dp" />
 
         <TextView
             android:id="@+id/activity_mail_text"
