--- a/app/src/main/res/layout/fragment_neighbour_list.xml
+++ b/app/src/main/res/layout/fragment_neighbour_list.xml
@@ -9,5 +9,7 @@
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
-    tools:context=".ui.neighbour_list.NeighbourFragment"
-    tools:listitem="@layout/fragment_neighbour" />
+    tools:context=".fragment.FavNeighboursFragment$NeighbourFragment"
+    tools:listitem="@layout/fragment_neighbour">
+
+</android.support.v7.widget.RecyclerView>
